[RMA] Feature #52315. Provide ability to check a field existence when value is null
Change-Id: I720b9bb68900e4039420ad9bd25c10f3f6a559b1